CS2270S18X/CPP/Recitations/Recitation_3/compiling_error.txt
C:\Users\ryhof\Downloads\CSCI_2270\CPP_Files\Recitations\Recitation_3\Recitation3.cpp: In function 'int main()':
C:\Users\ryhof\Downloads\CSCI_2270\CPP_Files\Recitations\Recitation_3\Recitation3.cpp:35:21: error: invalid type argument of unary '*' (have 'int')
     for(int i=0; i<*capacity; i++)
                     ^~~~~~~~
C:\Users\ryhof\Downloads\CSCI_2270\CPP_Files\Recitations\Recitation_3\Recitation3.cpp:39:15: warning: deleting array 'A'
     delete [] A;
               ^
C:\Users\ryhof\Downloads\CSCI_2270\CPP_Files\Recitations\Recitation_3\Recitation3.cpp:40:7: error: incompatible types in assignment of 'int*' to 'int [3]'
     A=newArray;
       ^~~~~~~~
C:\Users\ryhof\Downloads\CSCI_2270\CPP_Files\Recitations\Recitation_3\Recitation3.cpp:41:6: error: invalid type argument of unary '*' (have 'int')
     *capacity=newCapacity;
      ^~~~~~~~
C:\Users\ryhof\Downloads\CSCI_2270\CPP_Files\Recitations\Recitation_3\Recitation3.cpp: At global scope:
C:\Users\ryhof\Downloads\CSCI_2270\CPP_Files\Recitations\Recitation_3\Recitation3.cpp:84:5: error: expected unqualified-id before 'return'
     return 0;
     ^~~~~~
C:\Users\ryhof\Downloads\CSCI_2270\CPP_Files\Recitations\Recitation_3\Recitation3.cpp:85:1: error: expected declaration before '}' token
 }
 ^
